# MementoCloud

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: feature_request.yml
backend/: pyproject.toml
backend/app/: db.py  main.py  schema.py
backend/app/routers/: event.py
backend/app/services/: storage.py
frontend/: package-lock.json  package.json
