[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose A Lopez Jr", email = "flopez0294@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"
