[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jose A Lopez Jr", email = "flopez0294@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "boto3>=1.43.51",
    "fastapi>=0.139.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.22",
    "uvicorn[standard]>=0.51.0",
]
